--- a/jobs/docker.yaml
+++ b/jobs/docker.yaml
@@ -34,6 +34,6 @@
     - ssh $SSH_ADDRESS "docker stop $CI_PROJECT_NAME || true"
     - ssh $SSH_ADDRESS "docker rm $CI_PROJECT_NAME || true"
     - ssh $SSH_ADDRESS "
-      docker compose run -d
+      docker compose up -d
       $IMAGE_NAME"
     - ssh $SSH_ADDRESS "$PRUNE_COMMAND"
