--- a/jobs/docker.yaml
+++ b/jobs/docker.yaml
@@ -29,10 +29,10 @@
     CONTAINER_NAME_SUFFIX: ""
   before_script:
     # install envsubst
-    - apk add gettext
+#    - apk add gettext
   script:
     # create the new docker-compose.yml
-
+#    - envsubst < docker-compose.tmpl > docker-compose.yml
     - AUTH_COMMAND="echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY --username $CI_REGISTRY_USER --password-stdin";
     - ssh $SSH_ADDRESS "$AUTH_COMMAND"
     - ssh $SSH_ADDRESS "docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
