--- a/jobs/docker.yaml
+++ b/jobs/docker.yaml
@@ -40,7 +40,7 @@
     - ssh $SSH_ADDRESS "docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
     - ssh $SSH_ADDRESS "docker stop $CI_PROJECT_NAME || true"
     - ssh $SSH_ADDRESS "docker rm $CI_PROJECT_NAME || true"
-    - scp docker-compose.yml $SSH_ADDRESS:/
+    - scp docker-compose.yml $SSH_ADDRESS:~/
     - ssh $SSH_ADDRESS "docker compose up -d"
     - ssh $SSH_ADDRESS "$PRUNE_COMMAND"
 #
