--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name prod-team-14-mkg8u20m.final.prodcontest.ru;
+    server_name _;
 
     ssl_certificate     ssl/fullchain.pem;
     ssl_certificate_key ssl/privkey.pem;
@@ -10,7 +10,7 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://backend:80;
+        proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
