--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name _;
 
-    ssl_certificate     ssl/fullchain.pem;
-    ssl_certificate_key ssl/privkey.pem;
+    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     ssl_trusted_certificate ssl/chain.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
