--- a/DockerfileTest
+++ b/DockerfileTest
@@ -1,6 +1,5 @@
-FROM golang:1.23-alpine3.21 AS builder
+FROM golang:1.23-alpine3.21 AS BUILDER
 
-# Setup base software for building an app.
 RUN apk update && apk add ca-certificates git gcc g++ libc-dev binutils
 
 WORKDIR /opt
@@ -12,19 +11,14 @@ RUN go mod download && go mod verify
 # Copy application source.
 COPY . .
 
-# Build the application.
-RUN go build -o bin/application ./cmd/main.go
+RUN go test -c -o ./test ./internal/tests/e2e_test.go -timeout 120s -race -v -cover
 
-# Prepare executor image.
-FROM alpine:3.21 AS runner
+FROM alpine:3.21 as RUNNER
 
 RUN apk update && apk add ca-certificates libc6-compat openssh bash && rm -rf /var/cache/apk/*
 
 WORKDIR /opt
 
 COPY migrations migrations
-
-COPY --from=builder /opt/bin/application ./
-
-# Run the application.
-CMD ["./application"]
+COPY --from=BUILDER /opt/test ./
+CMD ["./test"]
