--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 HTTP_PORT=8080
 SERVER_ADDRESS=0.0.0.0:8080
 SERVER_PORT=8080
-POSTGRES_CONN=postgresql://username:password@postgres:5432/database?sslmode=disable
+POSTGRES_CONN=postgresql://ZXbIlCBgDOdm8sXmU76uRV:OuTGNmpQC1T0B875o3KeuJ@postgres:5432/database?sslmode=disable
 REDIS_HOST=redis
 REDIS_PORT=6379
-RANDOM_SECRET=1111111
+RANDOM_SECRET=ZXbIlCBgDOdm8sXmU76uRV
 BASE_URL=http://localhost:8080/
 MINIO_HOST=minio
 MINIO_PORT=9000
 CRYPTO_KEY=12345678901234567890123456789012
 
 # PostgreSQL
-POSTGRES_USER=username
-POSTGRES_PASSWORD=password
+POSTGRES_USER=ZXbIlCBgDOdm8sXmU76uRV
+POSTGRES_PASSWORD=OuTGNmpQC1T0B875o3KeuJ
 POSTGRES_DB=database
 
 # Telegram
@@ -28,4 +28,4 @@ AI_MODEL=nea
 # Minio
 MINIO_BUCKET_NAME=imagebucket
 MINIO_ROOT_USER=cooluser
-MINIO_ROOT_PASSWORD=minio123
+MINIO_ROOT_PASSWORD=ZXbIlCBgDOdm8sXmU76uRV
