--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ POSTGRES_DB=database
 
 # Telegram
 TELEGRAM_BOT_TOKEN=nea
-TELEGRAM_BOT_CHAT_ID=nea
+TELEGRAM_BOT_CHAT_ID=1
 TELEGRAM_BOT_ADMINS=nea
 
 # Feauters
