--- a/.env
+++ b/.env
@@ -26,6 +26,8 @@ AI_TOKEN=nea
 AI_MODEL=nea
 
 # Minio
+MINIO_HOST=minio
 MINIO_BUCKET_NAME=imagebucket
 MINIO_ROOT_USER=cooluser
-MINIO_ROOT_PASSWORD=ZXbIlCBgDOdm8sXmU76uRV
+MINIO_ROOT_PASSWORD=minio123
+MINIO_PORT=9000
