--- a/dev.env
+++ b/dev.env
@@ -2,7 +2,7 @@
 HTTP_PORT=8080
 SERVER_ADDRESS=0.0.0.0:8080
 SERVER_PORT=8080
-POSTGRES_CONN=postgresql://username:password@localhost:5432/database?sslmode=disable
+POSTGRES_CONN=postgresql://root:123@localhost:5432/database?sslmode=disable
 REDIS_HOST=localhost
 REDIS_PORT=6379
 RANDOM_SECRET=1111111
