--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /imagebucket {
-        proxy_pass http://minio:9000/imagebucket;
+    location /imagebucket/ {
+        proxy_pass http://minio:9000/imagebucket/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
