--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,6 +1,10 @@
 version: 3.9.0
 
 tasks:
+  run_tests:
+    docker-compose -f docker-compose.test.yml up -d
+    go test  ./tests/... -timeout 120s  -v -coverpkg=./internal/transport,./internal/service,./internal/repository,./internal/pkg,./internal/connections
+    docker-compose -f docker-compose.test.yml down -v
   devdocker:
     desc: Run docker compose in detached mode
     cmds:
