--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       retries: 5
     restart: unless-stopped
   minio:
-    restart: on-failure
+    restart: always
     container_name: minio_container
     image: minio/minio:latest
     command: server --console-address ":9001" /data/
