--- a/deploy/jobs/docker.yaml
+++ b/deploy/jobs/docker.yaml
@@ -34,7 +34,7 @@
 #    - apk add gettext
   script:
     # create the new docker-compose.yml
-    - envsubst < docker-compose.tmpl > docker-compose.yml
+    - envsubst < docker-compose.yml > docker-compose.yml
     - AUTH_COMMAND="echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY --username $CI_REGISTRY_USER --password-stdin";
     - ssh $SSH_ADDRESS "$AUTH_COMMAND"
     - ssh $SSH_ADDRESS "docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
@@ -47,7 +47,7 @@
 #
 #    script:
 #      # create the new docker-compose.yml
-#      - envsubst < docker-compose.tmpl > docker-compose.yml
+#      - envsubst < docker-compose.yml > docker-compose.yml
 #      # start ssh-agent and import ssh private key
 #      - eval `ssh-agent`
 #      - ssh-add <(echo "$ENV_PRIVATE_KEY_BASE64")
