--- a/dev.env
+++ b/dev.env
@@ -2,7 +2,7 @@
 HTTP_PORT=8080
 SERVER_ADDRESS=0.0.0.0:8080
 SERVER_PORT=8080
-POSTGRES_CONN=postgresql://root:123@localhost:5432/database?sslmode=disable
+POSTGRES_CONN=postgresql://ZXbIlCBgDOdm8sXmU76uRV:OuTGNmpQC1T0B875o3KeuJ@localhost:5432/database?sslmode=disable
 REDIS_HOST=localhost
 REDIS_PORT=6379
 RANDOM_SECRET=1111111
@@ -12,8 +12,8 @@ MINIO_PORT=9000
 CRYPTO_KEY=12345678901234567890123456789012
 
 # PostgreSQL
-POSTGRES_USER=username
-POSTGRES_PASSWORD=password
+POSTGRES_USER=ZXbIlCBgDOdm8sXmU76uRV
+POSTGRES_PASSWORD=OuTGNmpQC1T0B875o3KeuJ
 POSTGRES_DB=database
 
 # Telegram
