--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,12 +1,14 @@
 version: '3.9'
 services:
   postgres:
+    env_file:
+      - dev.env
     image: postgres:latest
     container_name: postgres
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: 123
-      POSTGRES_DB: postgres
+      POSTGRES_DB: database
     ports:
       - "5432:5432"
     networks:
@@ -16,8 +18,27 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-
+  redis:
+    env_file:
+      - dev.env
+    image: redis:latest
+    container_name: cache
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "cache-cli", "ping" ]
+      interval: 10s
+      timeout: 30s
+      retries: 3
+      start_period: 10s
+      start_interval: 5s
+    volumes:
+      - cache-data:/data
+    networks:
+      - backend-network
   minio:
+    env_file:
+      - dev.env
     restart: on-failure
     container_name: minio_container
     image: minio/minio:latest
@@ -44,4 +65,4 @@ networks:
 volumes:
   postgres_data:
   minio_data:
-
+  redis-data:
