github actions build workflow

--- a/dev.env
+++ b/dev.env
@@ -30,3 +30,7 @@ AI_MODEL=
 MINIO_BUCKET_NAME=imagebucket
 MINIO_ROOT_USER=cooluser
 MINIO_ROOT_PASSWORD=minio123
+
+KAFKA_ADDRESS=kafka:9092
+KAFKA_TOPIC=websocket
+KAFKA_GROUP_ID=groupid
