--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend {
+    server backend1:8080;
+    server backend2:8080;
+}
 server {
     listen 443 ssl;
     server_name _;
@@ -16,8 +20,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
     }
+    location /ws/ {
+            proxy_pass http://backendws:8080/ws;  # Адрес вашего WebSocket-сервера
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     location / {
-        proxy_pass http://backend:8080;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
