--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,15 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image mentor
         uses: docker/build-push-action@v5.3.0
         with:
-          context: .
+          context: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ghcr.io/mentor_link:latest
+      - name: Build and push Docker image mentor websocket
+        uses: docker/build-push-action@v5.3.0
+        with:
+          context: ./DockerfileWs
+          push: true
+          tags: ghcr.io/mentor_link_ws:latest
