--- a/DockerfileWs
+++ b/DockerfileWs
@@ -4,7 +4,7 @@ FROM golang:1.24.1-alpine3.21 AS builder
 RUN apk update && apk add ca-certificates git
 
 WORKDIR /app
-
+RUN apk add librdkafka-dev pkgconf
 # Download dependencies.
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
@@ -13,13 +13,13 @@ RUN go mod download && go mod verify
 COPY . .
 
 # Build the application.
-RUN go build -o bin/ws ./cmd/ws/main.go
+RUN go build -o bin/ws ./cmd/ws/main.go -tags musl
 
 # Prepare executor image.
 FROM alpine:3.21 AS runner
 
 RUN apk update && apk add ca-certificates bash && rm -rf /var/cache/apk/*
-
+RUN apk add librdkafka-dev pkgconf
 WORKDIR /app
 
 COPY --from=builder /app/bin/ws ./
