--- a/DockerfileWs
+++ b/DockerfileWs
@@ -13,7 +13,7 @@ RUN go mod download && go mod verify
 COPY . .
 
 # Build the application.
-RUN go build -o bin/ws ./cmd/ws/main.go -tags musl
+RUN go build -tags musl -o bin/ws ./cmd/ws/main.go
 
 # Prepare executor image.
 FROM alpine:3.21 AS runner
