--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,17 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
     runs-on: self-hosted
-    permissions:
-      contents: read
-      packages: write
+    strategy:
+      matrix:
+        include:
+          - image: ${{ env.REGISTRY }}/mentor_link:latest
+            dockerfile: ./Dockerfile
+          - image: ${{ env.REGISTRY }}/mentor_link_ws:latest
+            dockerfile: ./DockerfileWs
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
@@ -32,9 +35,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: |
-            ${{ env.REGISTRY }}/mentor_link:latest
-            ${{ env.REGISTRY }}/mentor_link_ws:latest
+          images: ${{  matrix.image }}
       - name: Build and push Docker image mentor
         uses: docker/build-push-action@v5.3.0
         with:
@@ -45,7 +46,8 @@ jobs:
       - name: Build and push Docker image mentor websocket
         uses: docker/build-push-action@v5.3.0
         with:
-          path: ./
-          dockerfile: ./DockerfileWs
+          context: .
+          file: ${{ matrix.dockerfile }}
           push: true
-          tags: ghcr.io/mentor_link_ws:latest
+          tags: ${{ matrix.image }}:latest
+          labels:  ${{ steps.meta.outputs.labels }}
