--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,13 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
-
+    strategy:
+      matrix:
+        include:
+          - image: ${{ env.REGISTRY }}/mentor_link:latest
+            dockerfile: ./Dockerfile
+          - image: ${{ env.REGISTRY }}/mentor_link_ws:latest
+            dockerfile: ./DockerfileWs
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
@@ -30,9 +36,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: |
-            ${{ env.REGISTRY }}/mentor_link:latest
-            ${{ env.REGISTRY }}/mentor_link_ws:latest
+          images: ${{  matrix.image }}
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
