--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - image: ${{ env.REGISTRY }}/mentor_link:latest
+          - image: ghcr.io/mentor_link:latest
             dockerfile: ./Dockerfile
-          - image: ${{ env.REGISTRY }}/mentor_link_ws:latest
+          - image: ghcr.io/mentor_link_ws:latest
             dockerfile: ./DockerfileWs
     steps:
       - name: Checkout
@@ -36,11 +36,11 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{  matrix.image }}
+          images: ${{ matrix.image }}
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
