--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build and Push Docker Image
 
 on:
@@ -6,17 +5,22 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+
 jobs:
   build:
     runs-on: self-hosted
     strategy:
       matrix:
         include:
-          - image: ghcr.io/mentor_link:latest
+          - image: ghcr.io/mentor_link
             dockerfile: ./Dockerfile
-          - image: ghcr.io/mentor_link_ws:latest
+          - image: ghcr.io/mentor_link_ws
             dockerfile: ./DockerfileWs
     steps:
+      - name: Debug Matrix
+        run: |
+          echo "Image: ${{ matrix.image }}"
+          echo "Dockerfile: ${{ matrix.dockerfile }}"
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
@@ -29,21 +33,15 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v4
         with:
-          images: ${{  matrix.image }}
-      - name: Build and push Docker image mentor
-        uses: docker/build-push-action@v5.3.0
-        with:
-          path: ./
-          dockerfile: ./Dockerfile
-          push: true
-          tags: ghcr.io/mentor_link:latest
-      - name: Build and push Docker image mentor websocket
-        uses: docker/build-push-action@v5.3.0
+          images: ${{ matrix.image }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
           tags: ${{ matrix.image }}:latest
-          labels:  ${{ steps.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels }}
