fix build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
     runs-on: self-hosted
@@ -15,9 +17,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - image: ghcr.io/mentor_link
+          - image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             dockerfile: ./Dockerfile
-          - image: ghcr.io/mentor_link_ws
+          - image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}_ws
             dockerfile: ./DockerfileWs
     steps:
       - name: Debug Matrix
@@ -31,22 +33,20 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-#      - name: Extract metadata (tags, labels) for Docker
-#        id: meta
-#        uses: docker/metadata-action@v4
-#        with:
-#          images: ${{ matrix.image }}
-#          tags: |
-#            type=raw,value=latest
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ matrix.image }}
 #
-#      - name: Debug Metadata
-#        run: |
-#          echo "Tags: ${{ steps.meta.outputs.tags }}"
-#          echo "Labels: ${{ steps.meta.outputs.labels }}"
+      - name: Debug Metadata
+        run: |
+          echo "Tags: ${{ steps.meta.outputs.tags }}"
+          echo "Labels: ${{ steps.meta.outputs.labels }}"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -54,4 +54,4 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ${{ matrix.image }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
