--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,13 @@ name: Deploy
 
 on:
   workflow_dispatch
-
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
   deploy:
     runs-on: self-hosted
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4.1.1
         env:
@@ -25,11 +26,13 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Compose Deployment
+        env:
+          IMAGE_REF: ${{ steps.meta.outputs.tags }}
         run: |
           docker-compose --context remote -f docker-compose.yml up -d
 
