--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,10 @@ jobs:
           echo "SSH_USER: ${{ secrets.SSH_USER }}"
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 --decode > ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+          if docker context inspect remote &>/dev/null; then
+          echo "Deleting existing Docker context 'remote'."
+          docker context rm -f remote
+          fi 
           docker context create remote --docker host=ssh://${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
 
       - name: Log in to the Container registry
