--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Test SSH Connection
         run: |
           echo "Testing SSH connection:"
-          ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} echo "SSH connection successful"
+          ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} --password-stdin echo "SSH connection successful"
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
@@ -55,7 +55,8 @@ jobs:
         run: |
           echo "Using Docker context:"
           docker context ls
-          docker compose -f docker-compose.yml up -d
+          ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} --password-stdin echo "SSH connection successful"
+          ssh docker ~/.ssh/id_rsa compose -f docker-compose.yml up -d
 
       - name: Cleanup
         if: always()
