--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,12 +51,16 @@ jobs:
         run: |
           echo "Using Docker context:"
           docker context ls
-          ssh ~/.ssh/id_rsa docker pull mentor_link_school:master
-          ssh ~/.ssh/id_rsa docker pull mentor_link_school_ws:master
-          ssh ~/.ssh/id_rsa docker stop mentor_link_school || true
-          ssh ~/.ssh/id_rsa docker rm mentor_link_school || true
-          ssh ~/.ssh/id_rsa docker compose -f docker-compose.yml up -d
-
+#          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker pull mentor_link_school:master"
+#          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker pull mentor_link_school_ws:master"
+#          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker stop mentor_link_school || true"
+#          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker rm mentor_link_school || true"
+#          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose -f docker-compose.yml up -d"
+           docker --context remote pull ghcr.io/mentor_link_school:master
+           docker --context remote pull ghcr.io/mentor_link_school_ws:master
+           docker --context remote stop mentor_link_school || true
+           docker --context remote rm mentor_link_school || true
+           docker --context remote compose -f docker-compose.yml up -d
       - name: Cleanup
         if: always()
         run: |
